Cursor vertex snapping not working in UV editor #90477

Closed
opened 2021-08-06 11:17:54 +02:00 by Dominik Rabatin · 8 comments

System Information
Operating system: Windows-10-10.0.18362-SP0 64 Bits
Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00

Blender Version
Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: 84da05a8b8

Short description of error
Cursor is not snapping to vertices in UV editor (Grid snapping is working). Working in 3D Viewport even with snapping to the middle as shown in gif.

Exact steps for others to reproduce the error
In new blender file open UV editing tab
Turn On snapping - set it to vertex snapping.
Shift + right-clik to move cursor - should be snapping to vertex now but it's not.

cursor-snap-bug.gif

**System Information** Operating system: Windows-10-10.0.18362-SP0 64 Bits Graphics card: GeForce GTX 960/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 432.00 **Blender Version** Broken: version: 2.93.0, branch: master, commit date: 2021-06-02 11:21, hash: `84da05a8b8` **Short description of error** Cursor is not snapping to vertices in UV editor (Grid snapping is working). Working in 3D Viewport even with snapping to the middle as shown in gif. **Exact steps for others to reproduce the error** In new blender file open UV editing tab Turn On snapping - set it to vertex snapping. Shift + right-clik to move cursor - should be snapping to vertex now but it's not. ![cursor-snap-bug.gif](https://archive.blender.org/developer/F10270480/cursor-snap-bug.gif)

Added subscriber: @DominikRabatin

Added subscriber: @DominikRabatin
Dominik Rabatin changed title from Cursor snapping not working in UV editor to Cursor vertex snapping not working in UV editor 2021-08-06 11:18:28 +02:00

Added subscriber: @APEC

Added subscriber: @APEC
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can reproduce on blender-v2.93-release branch build.

Could not find any ticket reported before for this issue so confirming. (Will take another look)


Getting crash for 3.0.0 on master branch

With 3.0.0 on current master (6188c29603da211b8305d8fe7c082dcae61688ab)

 	blender.exe!applyTranslation(TransInfo * t, const int * UNUSED_mval) Line 479	C
 	blender.exe!transformApply(bContext * C, TransInfo * t) Line 1875	C
 	blender.exe!transform_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 441	C
 	blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2082	C
 	blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2910	C
 	blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2958	C
 	blender.exe!wm_event_do_handlers(bContext * C) Line 3378	C
 	blender.exe!WM_main(bContext * C) Line 650	C
 	blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562	C

May be I should report this separately.

Can reproduce on `blender-v2.93-release` branch build. Could not find any ticket reported before for this issue so confirming. (Will take another look) --- Getting crash for 3.0.0 on master branch With 3.0.0 on current master (`6188c29603da211b8305d8fe7c082dcae61688ab`) ``` blender.exe!applySnapping(TransInfo * t, float * vec) Line 500 C blender.exe!applyTranslation(TransInfo * t, const int * UNUSED_mval) Line 479 C blender.exe!transformApply(bContext * C, TransInfo * t) Line 1875 C blender.exe!transform_modal(bContext * C, wmOperator * op, const wmEvent * event) Line 441 C blender.exe!wm_handler_operator_call(bContext * C, ListBase * handlers, wmEventHandler * handler_base, wmEvent * event, PointerRNA * properties, const unsigned char * kmi_idname) Line 2082 C blender.exe!wm_handlers_do_intern(bContext * C, wmEvent * event, ListBase * handlers) Line 2910 C blender.exe!wm_handlers_do(bContext * C, wmEvent * event, ListBase * handlers) Line 2958 C blender.exe!wm_event_do_handlers(bContext * C) Line 3378 C blender.exe!WM_main(bContext * C) Line 650 C blender.exe!main(int argc, const unsigned char * * UNUSED_argv_c) Line 562 C ``` May be I should report this separately.

This issue was referenced by ec00d218c9

This issue was referenced by ec00d218c9fbb018cfd02e97be150e4e4c75fa28

This issue was referenced by 3fab16fe8e

This issue was referenced by 3fab16fe8eb4a99607e00d5716ba88bf24020354

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Germano Cavalcante self-assigned this 2021-08-06 16:45:19 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90477
No description provided.